Fixed overlay align bug and added responsive overlay.

--- a/wp-content/themes/kinart/src/scss/components/project-overlay.scss
+++ b/wp-content/themes/kinart/src/scss/components/project-overlay.scss
@@ -49,9 +49,46 @@
     @include in;
     z-index: 1;
     width: 100%;
-    height: 600px;
+    &--xs {
+      display: block;
+      height: 200px;
+    }
+    &--sm {
+      display: none;
+      height: 347px;
+    }
+    &--md {
+      display: none;
+      height:496px;
+    }
+    &--lg {
+      display: none;
+      height: 600px;
+    }
+    @include breakpoint($sm) {
+      &--xs {
+        display: none;
+      }
+      &--sm {
+        display: block;
+      }
+    }
     @include breakpoint($md) {
       top: 0;
+      &--sm {
+        display: none;
+      }
+      &--md {
+        display: block;
+      }
+    }
+    @include breakpoint($lg) {
+      &--md {
+        display: none;
+      }
+      &--lg {
+        display: block;
+      }
     }
   }
   &__controls {
@@ -62,9 +99,12 @@
       padding: 1em;
     }
     @include breakpoint($md) {
-      top: 600px;
+      top: 496px;
       position: absolute;
       right: 0;
+    }
+    @include breakpoint($lg) {
+      top: 600px;
     }
     &:hover {
       cursor: pointer;
